Fix word wrap

--- a/app/assets/stylesheets/modules/_article-show.scss
+++ b/app/assets/stylesheets/modules/_article-show.scss
@@ -2,6 +2,7 @@
   background-color: #fff;
   width: 100%;
   min-height: 100%;
+  word-wrap: break-word;
 }
 .note {
   max-width: 620px;
